# rQuery

./: Cargo.toml  README.md
data/: load.sql
data/queries/: 1.sql  2.sql  3.sql  4.sql  5.sql
data/tables/: customers.csv  products.csv  sales.csv
src/: db.rs  executor.rs  lib.rs  logical_plan.rs  main.rs
