[package]
name = "rQuery"
version = "0.1.0"
edition = "2024"

[dependencies]
arrow = "55.0.0"
sqlparser = "0.55.0"
datafusion = { version = "47.0.0", optional = true }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"], optional = true }
rand = { version = "0.9.1", optional = true }
csv = { version = "1.3.1", optional = true }

[features]
build-binary = ["datafusion", "tokio", "rand", "csv"]

[[bin]]
name = "gen_data"
required-features = ["build-binary"]

[[bin]]
name = "df_compare"
required-features = ["build-binary"]
